# EX4

./: AStar.cpp  AStar.h  Astar.txt  BFS.cpp  BFS.h  BFS.txt  BestFirstSearch.cpp  BestFirstSearch.h  BestFirstSearch.txt  Boot.h  CMakeLists.txt  Cachemanager.cpp  Cachemanager.h  ClientHandler.h  DFS.cpp  DFS.h  DFS.txt  Graph.xlsx  ISearcher.cpp  ISearcher.h  Matrix.h  MatrixSolver.cpp  MatrixSolver.h  MyCacheManager.cpp  MyCacheManager.h  MyClientHandler.cpp  MyClientHandler.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Node.cpp  Node.h  ParallelServer.cpp  ParallelServer.h  Problem.cpp  Problem.h  README.md  Searchable.cpp  Searchable.h  Searcher.cpp  Searcher.h  (+13 more)
